增加头像上传接口
